# misty2py-skills

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
accompanying_data/: template.py
construction-proofs/bare/: angry.py  battery_printer.py  explore.py  face_recognition.py  hey_misty.py  listening.py  question_answering.py
construction-proofs/misty2py/: angry.py  battery_printer.py  explore.py  face_recognition.py  question_answering.py  remote_control.py
construction_proofs/bare/: angry.py  face_recognition.py  question_answering.py  remote_control.py
construction_proofs/misty2py/: battery_printer.py  hey_misty.py  listening.py  question_answering.py
misty2py_skills/: __init__.py  angry_expression.py  battery_printer.py  explore.py  expressions.py  face_recognition.py  free_memory.py  hey_misty.py  listening_expression.py  question_answering.py  remote_control.py
misty2py_skills/demonstrations/: __init__.py  battery_printer.py  explore.py
misty2py_skills/essentials/: free_memory.py  movement.py  speech_transcripter.py
misty2py_skills/expressions/: angry.py  listening.py
misty2py_skills/utils/: converse.py  status.py  template.py  utils.py
skills_without_misty2py/: battery_printer.py  explore.py  hey_misty.py  question_answering.py  remote_control.py
tests/: test_misty2py_skills.py  utils.py
videoclip_sources/: e001.py  e002.py  e003.py  e004.py  e005.py
